src/k8s/apps/flux-webui/middleware-https-redirect.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: flux-web-https-redirect
  namespace: flux-system
spec:
  redirectScheme:
    scheme: https
    permanent: true
