src/k8s/apps/flux-webui/ingressroute-http-redirect.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: flux-web-http-redirect
  namespace: flux-system
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`flux.levizitting.com`) && PathPrefix(`/`)
      priority: 1000
      middlewares:
        - name: flux-web-https-redirect
      services:
        - name: flux-web-flux-operator
          port: 9080
